2010-10-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Use GCharsetConverter instead of g_iconv in TextCodecGtk
        https://bugs.webkit.org/show_bug.cgi?id=47896

        * wtf/gobject/GTypedefs.h:

2010-10-21  Adam Barth  <abarth@webkit.org>

        Unreviewed, rolling out r70174.
        http://trac.webkit.org/changeset/70174
        https://bugs.webkit.org/show_bug.cgi?id=41948

        This patch reverts a change that causes
        http/tests/xmlhttprequest/origin-whitelisting-removal.html to crash.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::throwException):

2010-10-20  Simon Fraser  <simon.fraser@apple.com>

        Fix the EFL build.

        * wtf/CMakeLists.txt:

2010-10-20  Simon Fraser  <simon.fraser@apple.com>

        Fix Windows build: export needed symbols.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-10-19  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Gavin Barraclough.

        https://bugs.webkit.org/show_bug.cgi?id=47851
        
        Add methods to DecimalNumber to return the buffer length
        required for decimal and exponential output.
        
        Make some of the DecimalNumber code non-inline (no
        effect on Sunspider), adding DecimalNumber.cpp to various
        build systems.
        
        Make some DecimalNumber methods 'const'.

        * Android.mk:
        * Android.v8.wtf.mk:
        * GNUmakefile.am:
        * JavaScriptCore.exp:
        * JavaScriptCore.gypi:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * runtime/NumberPrototype.cpp:
        (JSC::numberProtoFuncToExponential):
        (JSC::numberProtoFuncToFixed):
        (JSC::numberProtoFuncToPrecision):
        * wtf/DecimalNumber.cpp: Added.
        (WTF::DecimalNumber::bufferLengthForStringDecimal):
        (WTF::DecimalNumber::bufferLengthForStringExponential):