@@ -50,6 +50,14 @@ class wxString;
 class BString;
 #endif
 
+#if PLATFORM(BREWMP)
+// AECHAR is defined in AEEStdDef.h, but don't include it here to avoid conflicts.
+#ifndef _AECHAR_DEFINED
+typedef uint16             AECHAR;
+#define _AECHAR_DEFINED
+#endif
+#endif
+
 namespace WTF {
 
 class CString;
@@ -295,6 +303,10 @@ public:
 #if PLATFORM(HAIKU)
     String(const BString&);
     operator BString() const;
+#endif
+
+#if PLATFORM(BREWMP)
+    String(const AECHAR*);
 #endif
 
     static String fromUTF8(const char*, size_t);
